MODIFIQUE ARCHIVO SOBRE MI

--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -29,7 +29,9 @@
         </section>
         <section id="Mi historia personal">
 
-            <p>Nací y crecí en Salamina Caldas, donde pase la mayor parte  de mi infancia rodeado </p>
+            <p>Nací y crecí en Salamina Caldas, donde pase la mayor parte  de mi infancia rodeada
+                de una familia bastante amorosa y un poco grande. A medida  que iba creciendo, tuve 
+                que cambiar de residencia y asi mismo  todo lo que /p>
         </section>
         <section id="databases">
             <h3>Bases de Datos: SQL vs NoSQL</h3>
