modifique colores e informaacion

--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog - Contacto</title>
+    <title>Blog Personal - Contacto</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Tech Blog</h1>
+        <h1>Blog personal</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -64,7 +64,7 @@
         </form>
     </main>
     <footer>
-        <p>© 2024 Tech Blog. Todos los derechos reservados.</p>
+        <p>© 2024 Blog personal. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
