--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="C:\Users\Samuel\OneDrive\Escritorio\ejemplo.jpg.jpg" alt="Logo" width="100">
         <h1>Portafolio Personal</h1>
         <nav>
             <ul>
@@ -19,6 +20,9 @@
             </ul>
         </nav>
     </header>
+
+    
+    
 
     <main>
         <section id="inicio">
