--- a/proyectos.html
+++ b/proyectos.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog - Fullstack</title>
+    <title>Blog personal - Fullstack</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Tech Blog</h1>
+        <h1>Blog personal</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -20,26 +20,25 @@
         </nav>
     </header>
     <main>
-        <h2>Fullstack Development</h2>
+        <h2>L O R E M ----- I P S U M T</h2>
         <section id="mern">
-            <h3>MERN Stack</h3>
-            <p>El MERN stack incluye MongoDB, Express, React, y Node.js. Este stack es extremadamente popular para el desarrollo de aplicaciones web debido a que cada tecnología en el stack está diseñada para trabajar armónicamente juntas, facilitando el desarrollo de aplicaciones complejas y reactivas con JavaScript tanto en el cliente como en el servidor.</p>
+            <h3>--------</h3>
+            <p>ELorem ipsum dolor sit amet, consectetur adipiscing elit.
+               Cras sed fringilla velit, in vulputate est. Praesent efficitur arcu in dolor pretium tincidunt. Cras justo mauris, bibendum quis lorem sit amet, accumsan molestie quam. Nullam semper ornare quam. Suspendisse lobortis rutrum ex, vel sagittis sapien mollis id. Aenean euismod ex elit, eget bibendum purus ultricies dapibus. Nullam rutrum odio ut pretium consequat</p>
         </section>
         <section id="mean">
-            <h3>MEAN Stack</h3>
-            <p>Similar al MERN stack, el MEAN stack utiliza Angular en lugar de React. Incluye MongoDB, Express, Angular, y Node.js. Angular ofrece un marco más estructurado para el desarrollo de aplicaciones, con fuerte soporte para aplicaciones de una sola página (SPA).</p>
+            <h3>--------</h3>
+            <p>Vivamus leo lacus, tempus ac pharetra in, aliquam eu enim. Duis feugiat justo tortor, id mollis eros condimentum sit amet. Integer nec volutpat augue. Suspendisse at interdum diam,
+                 id viverra justo. Nam dui neque, gravida eget ligula porta, bibendum faucibus neque.</p>
         </section>
         <section id="jamstack">
-            <h3>JAMstack</h3>
-            <p>JAMstack no es un stack de tecnologías específicas, sino un enfoque de arquitectura que involucra JavaScript, APIs y Markup. Se enfoca en mejorar el rendimiento, la seguridad y la escalabilidad separando el frontend del backend y preconstruyendo el sitio con generadores de sitios estáticos.</p>
+            <h3>--------</h3>
+            <p>JDonec feugiat sollicitudin risus nec rhoncus. Quisque ut dolor id nisl interdum luctus ut nec urna. Nullam at lorem ultricies, laoreet erat varius, posuere erat. Donec ac dolor id erat eleifend accumsan. In malesuada lorem a ex egestas rhoncus. Fusce tempus dignissim est, vel commodo erat dapibus sit amet. Vestibulum id nisl eu dui lacinia pulvinar.</p>
         </section>
-        <section id="serverless">
-            <h3>Desarrollo Serverless</h3>
-            <p>El desarrollo Serverless permite a los desarrolladores construir y ejecutar aplicaciones y servicios sin preocuparse por la infraestructura subyacente. Las empresas de hosting manejan la máquina y la asignación de recursos, permitiendo que los desarrolladores se enfoquen en el código. Esto es ideal para aplicaciones que necesitan escalar de manera eficiente.</p>
-        </section>
+
     </main>
     <footer>
-        <p>© 2024 Tech Blog. Todos los derechos reservados.</p>
+        <p>© 2024 Blog personal. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
