--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech Blog - <sobre-mi></sobre-mi></title>
+    <title>Blog personal - <sobre-mi></sobre-mi></title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Tech Blog</h1>
+        <h1> Blog personal</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -25,25 +25,23 @@
         
             <p>Hola, mi nombre es Luisa Fernanda y aunque es algo un poco extraño para mi, 
                 quiero compartir un poco sobre quién soy,qué me motiva y qué pueden esperar 
-                encontrar aquí /p>
+                encontrar aquí
         </section>
         <section id="Mi historia personal">
 
             <p>Nací y crecí en Salamina Caldas, donde pase la mayor parte  de mi infancia rodeada
                 de una familia bastante amorosa y un poco grande. A medida  que iba creciendo, tuve 
-                que cambiar de residencia y asi mismo  todo lo que /p>
+                que cambiar de residencia y asi mismo todo lo que esta tenia.
         </section>
-        <section id="databases">
-            <h3>Bases de Datos: SQL vs NoSQL</h3>
-            <p>En el desarrollo backend, las bases de datos juegan un papel crucial. SQL (como PostgreSQL) es conocido por su robustez y estructura, ideal para transacciones complejas. NoSQL (como MongoDB) ofrece flexibilidad y es excelente para escalar horizontalmente y manejar grandes volúmenes de datos no estructurados.</p>
-        </section>
-        <section id="apis">
-            <h3>APIs REST y GraphQL</h3>
-            <p>Las APIs permiten que diferentes aplicaciones se comuniquen. REST es un estilo arquitectónico que usa HTTP para comunicación y es conocido por su simplicidad y estado sin conexión. GraphQL, por otro lado, permite a los clientes especificar exactamente los datos que necesitan, lo que puede reducir el ancho de banda y mejorar los tiempos de respuesta.</p>
+        <section id="En la actualiad">
+
+            <p> Estudio de manera virtual un pregrado en ingenieria informatica, tambien 
+                tengo dos emprendimientos, uno es de ropa y otro es una papeleria, me encantan los animales.
+            </p>
         </section>
     </main>
     <footer>
-        <p>© 2024 Tech Blog. Todos los derechos reservados.</p>
+        <p>© 2024 Blog personal. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
